--- a/settings.html
+++ b/settings.html
@@ -68,7 +68,7 @@
                 <div class="action-buttons">
                   <button class="change-name">Cambiar nombre</button>
                   <button class="change-document-info">
-                    Documento de identidad / Pasaporte
+                    Documento de identidad
                   </button>
                 </div>
               </div>
@@ -134,27 +134,33 @@
           </div>
         </section>
 
-
         <!-- Right side -->
-
 
         <section class="right-side">
           <!-- directions container -->
           <div class="directions">
             <div class="upper-content">
               <h1>Direcciones</h1>
-              <button class="add-new-direction custom-primary-button">Agregar uno nuevo</button>
+              <button class="add-new-direction custom-primary-button">
+                Agregar uno nuevo
+              </button>
             </div>
-            <span class="apt-info-button custom-secondary-button">Torre Sky 01 - Apart. M8</span>
+            <span class="apt-info-button custom-secondary-button"
+              >Torre Sky 01 - Apart. M8</span
+            >
             <div class="direction-info">
               <div class="info">
                 <p>Apartamento M8</p>
                 <p>Ave. José Contreras, Distrito Nacional, Santo Domingo</p>
                 <p>Próximo a la tienda la Sirena, Detrás de la UASD</p>
-                <span class="custom-primary-button">Título de propiedad / alquiler</span>
+                <span class="custom-primary-button"
+                  >Título de propiedad / alquiler</span
+                >
               </div>
               <div class="setting-button-container">
-                <button class="setting-button custom-primary-button">...</button>
+                <button class="setting-button custom-primary-button">
+                  ...
+                </button>
               </div>
             </div>
             <div class="map">
@@ -170,11 +176,74 @@
                 ></iframe>
               </div>
             </div>
-            <button class="see-all-directions custom-primary-button">Ver todas las direcciones (3)</button>
+            <button class="see-all-directions custom-primary-button">
+              Ver todas las direcciones (3)
+            </button>
           </div>
-          <div>
-              
+
+          <!-- credit cards -->
+          <div class="credit-cards">
+            <div class="upper-content">
+              <h1>Tarjetas</h1>
+              <button class="custom-primary-button">
+                Agregar uno nuevo
+              </button>
+            </div>
+            <span class="apt-info-button custom-secondary-button"
+              >Principal</span
+            >
+            <div class="credit-card">
+              <div class="info-card">
+                <img src="./img/credit-card.png" alt="" />
+                <div class="info">
+                  <p>Visa</p>
+                  <span>Crédito ***8126</span>
+                </div>
+              </div>
+              <button class="setting-button custom-primary-button">...</button>
+            </div>
+            <span class="lower-message">Para actualizar una tarjeta de crédito o débito debe tener al menos dos (2) tarjetas registradas</span>
           </div>
+
+          <!-- Email accounts -->
+          <div class="email-accounts">
+            <div class="upper-content">
+              <h1>Correo electrónico</h1>
+              <button class="custom-primary-button">
+                Agregar uno nuevo
+              </button>
+            </div>
+            <span class="apt-info-button custom-secondary-button"
+              >Principal</span
+            >
+            <div class="email-account">
+              <div class="info-email">
+                <p>henry.altamiro@gmail.com</p>
+              </div>
+              <button class="setting-button custom-primary-button">Cambiar</button>
+            </div>
+            <span class="lower-message">Para actualizar una dirección de correo electrónico debe tener al menos dos (2) direcciones de correo electrónico registradas.</span>
+          </div>
+
+          <!-- phone numbers -->
+          <div class="phone-numbers">
+            <div class="upper-content">
+              <h1>Número de teléfono</h1>
+              <button class="custom-primary-button">
+                Agregar uno nuevo
+              </button>
+            </div>
+            <span class="apt-info-button custom-secondary-button"
+              >Principal (Celular)</span
+            >
+            <div class="phone-number">
+              <div class="info-number">
+                <p>(8**) ***-8383</p>
+              </div>
+              <button class="setting-button custom-primary-button">Cambiar</button>
+            </div>
+          </div>
+
         </section>
       </div>
     </main>
